--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -38,8 +38,8 @@
 
         <TextView
             android:id="@+id/currentProductionView"
-            android:layout_width="356dp"
-            android:layout_height="89dp"
+            android:layout_width="360dp"
+            android:layout_height="75dp"
             android:layout_marginTop="44dp"
             android:background="@drawable/textview_border"
             android:text="TextView"
@@ -53,25 +53,24 @@
 
         <TextView
             android:id="@+id/pastProductionsView"
-            android:layout_width="176dp"
-            android:layout_height="129dp"
-            android:layout_marginTop="48dp"
+            android:layout_width="262dp"
+            android:layout_height="94dp"
+            android:layout_marginTop="12dp"
             android:text="TextView"
             android:textAlignment="center"
             android:textColor="@color/white"
             android:textSize="20sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.509"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/currentProductionView" />
+            app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
         <Button
             android:id="@+id/scriptButton"
             android:layout_width="130dp"
             android:layout_height="70dp"
             android:layout_marginStart="52dp"
-            android:layout_marginTop="96dp"
+            android:layout_marginTop="48dp"
             android:layout_marginEnd="47dp"
             android:background="@color/teal_700"
             android:text="@string/script_btn"
@@ -79,21 +78,59 @@
             android:textSize="19sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toStartOf="@+id/messagesButton"
+            app:layout_constraintHorizontal_bias="0.0"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/pastProductionsView" />
+            app:layout_constraintTop_toBottomOf="@+id/editProductionsButton" />
 
         <Button
             android:id="@+id/messagesButton"
             android:layout_width="130dp"
             android:layout_height="70dp"
-            android:layout_marginTop="96dp"
-            android:layout_marginEnd="52dp"
+            android:layout_marginTop="48dp"
+            android:layout_marginEnd="44dp"
             android:background="@color/purple_500"
             android:text="@string/messages_btn"
             android:textColor="@color/white"
             android:textSize="19sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/editProductionsButton" />
+
+        <TextView
+            android:id="@+id/textView7"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="36dp"
+            android:text="@string/past_productions"
+            android:textAlignment="center"
+            android:textColor="@android:color/white"
+            android:textSize="26sp"
+            android:textStyle="bold"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/currentProductionView" />
+
+        <Button
+            android:id="@+id/editProductionsButton"
+            android:layout_width="147dp"
+            android:layout_height="35dp"
+            android:layout_marginTop="28dp"
+            android:background="@color/darker_orange"
+            android:text="@string/edit_productions_btn"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/pastProductionsView" />
+
+        <Button
+            android:id="@+id/deleteAccountButton"
+            android:layout_width="95dp"
+            android:layout_height="28dp"
+            android:layout_marginTop="8dp"
+            android:background="@color/darker_orange"
+            android:text="@string/delete_account_btn"
+            android:textSize="10sp"
+            app:layout_constraintEnd_toEndOf="@+id/welcomeNameView"
+            app:layout_constraintStart_toStartOf="@+id/welcomeNameView"
+            app:layout_constraintTop_toBottomOf="@+id/welcomeNameView" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
