--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -26,5 +26,14 @@
         android:id="@+id/homePageFragment"
         android:name="com.example.playpalapp.HomePageFragment"
         android:label="fragment_home_page"
-        tools:layout="@layout/fragment_home_page" />
+        tools:layout="@layout/fragment_home_page" >
+        <action
+            android:id="@+id/action_homePageFragment_to_editProductionsFragment"
+            app:destination="@id/editProductionsFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/editProductionsFragment"
+        android:name="com.example.playpalapp.EditProductionsFragment"
+        android:label="fragment_edit_productions"
+        tools:layout="@layout/fragment_edit_productions" />
 </navigation>
