--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -66,14 +66,14 @@
             app:layout_constraintTop_toBottomOf="@+id/textView7" />
 
         <Button
-            android:id="@+id/scriptButton"
+            android:id="@+id/notesButton"
             android:layout_width="130dp"
             android:layout_height="70dp"
             android:layout_marginStart="52dp"
             android:layout_marginTop="48dp"
             android:layout_marginEnd="47dp"
             android:background="@color/teal_700"
-            android:text="@string/script_btn"
+            android:text="@string/notes_btn"
             android:textColor="@android:color/white"
             android:textSize="19sp"
             android:textStyle="bold"
