--- a/app/src/main/res/layout/fragment_contacts.xml
+++ b/app/src/main/res/layout/fragment_contacts.xml
@@ -13,7 +13,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/red"
+    android:background="#EC2C6F"
     tools:context=".MainActivity">
 
     <androidx.recyclerview.widget.RecyclerView
@@ -21,5 +21,26 @@
         android:layout_height="match_parent"
         android:id="@+id/contacts_recycler_view"
         />
+
+    <RelativeLayout
+        android:layout_width="match_parent"
+        android:layout_height="80dp"
+        android:layout_alignParentBottom="true"
+        android:padding="8dp"
+        android:id="@+id/bottom_layout">
+
+        <ImageButton
+            android:layout_width="64dp"
+            android:layout_height="64dp"
+            android:id="@+id/addContactButton"
+            android:layout_centerInParent="true"
+            android:layout_marginStart="10dp"
+            android:padding="8dp"
+            android:src="@drawable/ic_baseline_add_24"
+            android:background="@drawable/rounded_corner"
+            android:backgroundTint="@color/yellow"
+            />
+
+    </RelativeLayout>
 
     </RelativeLayout>
