--- a/app/src/main/res/layout/fragment_messages.xml
+++ b/app/src/main/res/layout/fragment_messages.xml
@@ -21,6 +21,7 @@
         android:layout_height="match_parent"
         android:id="@+id/messages_recycler_view"
         android:layout_above="@id/bottom_layout"
+        android:layout_below="@id/name_messages_top"
         />
 
     <TextView
