--- a/app/src/main/res/layout/fragment_home_page.xml
+++ b/app/src/main/res/layout/fragment_home_page.xml
@@ -23,8 +23,8 @@
 
         <TextView
             android:id="@+id/welcomeNameView"
-            android:layout_width="191dp"
-            android:layout_height="84dp"
+            android:layout_width="215dp"
+            android:layout_height="88dp"
             android:layout_marginTop="56dp"
             android:text="Welcome Name"
             android:textAlignment="center"
@@ -40,7 +40,7 @@
             android:id="@+id/currentProductionView"
             android:layout_width="360dp"
             android:layout_height="75dp"
-            android:layout_marginTop="44dp"
+            android:layout_marginTop="68dp"
             android:background="@drawable/textview_border"
             android:text="TextView"
             android:textAlignment="center"
@@ -48,6 +48,7 @@
             android:textSize="24sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.49"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/imageView2" />
 
@@ -132,5 +133,18 @@
             app:layout_constraintEnd_toEndOf="@+id/welcomeNameView"
             app:layout_constraintStart_toStartOf="@+id/welcomeNameView"
             app:layout_constraintTop_toBottomOf="@+id/welcomeNameView" />
+
+        <TextView
+            android:id="@+id/userIdView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="28dp"
+            android:text="TextView"
+            android:textAlignment="center"
+            android:textColor="@color/white"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.507"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/notesButton" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
